--- a/login.html
+++ b/login.html
@@ -3,29 +3,62 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <meta name="description" content="Unlock unique offers with coupons and discounts, 
+        stay informed with our weekly newsletters, gain access to our podcast,
+        and start designing your own shoes, participate in contests, 
+        and enhance your knowledge through our online courses">
+        <meta name="author" content="Andreas Olaussen">
+
+        <!-- Meta for Facebook, Instagram og Tiktok -->
+        <meta property="og:type" content="website">
+        <meta property="og:title" content="ProSko - Log in to your ProSko account for membership benefits.">
+        <meta property="og:description" content="Unlock unique offers with coupons and discounts, 
+        stay informed with our weekly newsletters, gain access to our podcast,
+        and start designing your own shoes, participate in contests, 
+        and enhance your knowledge through our online courses">
+        <meta property="og:image" content="img/alexis-chloe-FcgxMCkjwEo-unsplash.jpg">
+        <meta property="og:url" content="https://itstud.hiof.no/~andreabo/oblig4/login.html">
+
+        <!-- Meta for Twitter -->
+        <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:title" content="ProSko - Log in to your ProSko account for membership benefits.">
+        <meta name="twitter:description" content="Unlock unique offers with coupons and discounts, 
+        stay informed with our weekly newsletters, gain access to our podcast,
+        and start designing your own shoes, participate in contests, 
+        and enhance your knowledge through our online courses">
+        <meta name="twitter:image" content="img/alexis-chloe-FcgxMCkjwEo-unsplash.jpg">
+        <meta name="twitter:url" content="https://itstud.hiof.no/~andreabo/oblig4/login.html">
+
         <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" type="text/css">
         <link href="css/font/fontawesome-free-6.4.2-web/css/fontawesome.css" rel="stylesheet">
         <link href="css/font/fontawesome-free-6.4.2-web/css/brands.css" rel="stylesheet">
         <link href="css/font/fontawesome-free-6.4.2-web/css/solid.css" rel="stylesheet">
         <link rel="stylesheet" href="css/style.css" type="text/css">
-        <title>ProSko Nettbutikk</title>
+        <title>ProSko - Log in to your ProSko account for membership benefits.</title>
     </head>
     <body>
+        <a href="#main" class="skip" aria-label="Skip to main content">Skip to main content</a>
         <nav class="shipping">
             <ul class="shipping-info">
                 <li><a href="#">30 days return policy</a></li>
                 <li><a href="#">Free Shipping over $100</a></li>
                 <li><a href="#">Home delivery in 2-6 days</a></li>
             </ul>
-        </nav> 
+        </nav>    
         <div id="grid-container">
-            <header>            
+            <header>       
                 <nav>
-                    <div>
-                        <i id="meny" class="fa-solid fa-bars fa-xl" style="color: #000000;"></i>
-                        <i class="fa-solid fa-magnifying-glass fa-xl" style="color: #000000;"></i>
-                        <a class="logo" href="index.html" id="logo">ProSko</a>
-                        <a href="login.html"><i class="fa-solid fa-user fa-xl" style="color: #000000;"></i></a>
+                    <div class="logo-nav">
+                        <i id="meny" class="fa-solid fa-bars fa-xl" style="color: #000000;" role="button" aria-label="open menu"></i>
+                        <i class="fa-solid fa-magnifying-glass fa-xl" style="color: #000000;" aria-label="search"></i>
+                        <a class="logo" href="index.html" id="logo" aria-label="prosko homepage">ProSko</a>
+                        <a href="login.html">
+                            <span aria-hidden="true">
+                            <i class="fa-solid fa-user fa-xl" style="color: #000000;" aria-label="shopping cart"></i>
+                            </span>
+                            <span class="sr-only">Go to login site</span>
+                        </a>
                         <i class="fa-solid fa-cart-shopping fa-xl" style="color: #000000;"></i>
                     </div>
                     <ul class="navbar">
@@ -35,10 +68,11 @@
                         <li><a href=#>Brands</a></li>
                         <li><a href=#>Accessories</a></li>
                         <li><a href="login.html">Customer club</a></li>
+                        <li><a href="analyse.html">Analyse</a></li>
                     </ul>
                 </nav>
             </header>
-            <main>
+            <main id="main">
                 <section class="login-container">
                     <form class="login">
                         <h1 class="h1-sign-in">Sign in</h1>
@@ -53,8 +87,8 @@
                     </form>
                 </section>
                 <aside class="login-icons">
-                    <i class="fa-brands fa-facebook fa-2xl" style="color: #000000;"></i>
-                    <i class="fa-brands fa-google fa-2xl" style="color: #000000;"></i>
+                    <i class="fa-brands fa-facebook fa-2xl" style="color: #000000;" aria-label="login with facebook"></i>
+                    <i class="fa-brands fa-google fa-2xl" style="color: #000000;" aria-label="login with google"></i>
                 </aside>
                 <div class="membership-container">
                     <section class="membership-benefits">
@@ -73,13 +107,13 @@
             <footer>
                 <div class="flex-container">
                     <section class="footer-information">
-                        <h1>Prosko</h1>
+                        <h1><a href="index.html" aria-label="homepage">ProSko</a></h1>
                         <p>Welcome to our online store! ProSko is an e-commerce platform that specializes in footwear for people of all ages. Our mission is to offer a pair of shoes for every individual. We provide a diverse range of options, from premium brands like Bugatti and Timberland to more budget-friendly choices such as Adidas and Nike. Our selection is continually expanding, with new products being added regularly.</p>
                         <p>In partnership with environmental organizations, we sell both new and used shoes to reduce our environmental footprint. Additionally, we package all our shoes in eco-friendly materials. At ProSko, we offer free shipping on orders over $100 and have a hassle-free return policy in case you're not satisfied with your purchase. Thank you for choosing ProSko for all your footwear needs!</p>
                     </section>
                     <div class="about-follow-container">
                         <section class="about-us">
-                            <h3>About us</h3>
+                            <h2>About us</h2>
                             <ul>
                                 <li><a href="#">Customer Club</a></li>
                                 <li><a href="#">Privacy Policy</a></li>
@@ -90,24 +124,24 @@
                         <section class="follow-us">
                             <h3>Follow us</h3>
                             <ul class="follow-icons">
-                                <li><i class="fa-brands fa-twitter fa-2xl" style="color: #000000;"></i></li>
-                                <li><i class="fa-brands fa-instagram fa-2xl" style="color: #000000;"></i></li>
-                                <li><i class="fa-brands fa-facebook fa-2xl" style="color: #000000;"></i></li>
-                                <li><i class="fa-brands fa-tiktok fa-2xl" style="color: #000000;"></i></li>
+                                <li><i class="fa-brands fa-twitter fa-2xl" style="color: #000000;" aria-label="follow us on twitter/x"></i></li>
+                                <li><i class="fa-brands fa-instagram fa-2xl" style="color: #000000;" aria-label="follow us on instagram"></i></li>
+                                <li><i class="fa-brands fa-facebook fa-2xl" style="color: #000000;" aria-label="follow us on facebook"></i></li>
+                                <li><i class="fa-brands fa-tiktok fa-2xl" style="color: #000000;" aria-label="follow us on tiktok"></i></li>
                             </ul>
                         </section>
                     </div>
                     <section class="payment">
                         <h3>Payment Methods</h3>
                         <ul class="payment-icons">
-                            <li><i class="fa-brands fa-paypal fa-2xl" style="color: #000000;"></i></li>
-                            <li><i class="fa-brands fa-stripe fa-2xl" style="color: #000000;"></i></li>
-                            <li><i class="fa-brands fa-cc-visa fa-2xl" style="color: #000000;"></i></li>
-                            <li><i class="fa-brands fa-cc-mastercard fa-2xl" style="color: #000000;"></i></li>
+                            <li><i class="fa-brands fa-paypal fa-2xl" style="color: #000000;" aria-label="pay with paypal"></i></li>
+                            <li><i class="fa-brands fa-stripe fa-2xl" style="color: #000000;" aria-label="pay with stripe"></i></li>
+                            <li><i class="fa-brands fa-cc-visa fa-2xl" style="color: #000000;" aria-label="pay with visa"></i></li>
+                            <li><i class="fa-brands fa-cc-mastercard fa-2xl" style="color: #000000;" aria-label="pay with mastercard"></i></li>
                         </ul> 
                     </section>
-                    <button class="cookies"><i class="fa-solid fa-cookie-bite fa-2xl" style="color: #000000;"></i></button>
-                    <button class="contact"><i class="fa-solid fa-message fa-2xl" style="color: #000000;"></i></button>
+                    <i class="cookies fa-solid fa-cookie-bite fa-2xl" style="color: #000000;" aria-label="cookie settings"></i>
+                    <i class="contact fa-solid fa-message fa-2xl" style="color: #000000;" aria-label="chat with us"></i>
                 </div>
             </footer>
         </div>
